[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
]
